# ekklesia-voting

./: .envrc  .gitignore  Pipfile  README.md  babel.cfg  config.example.yml  consoleenv.py  default.nix  docker.nix  docker_static.nix  dodo.py  envrc.example  flake.nix  makebabel.ipy  pyproject.toml  python_dev_env.nix  setup.cfg  setup.py  shell.nix
.github/workflows/: test.yml
alembic/: env.py
nix/: app.nix  deps.nix  gunicorn_config.py.nix  javascript_deps.nix  serve_app.nix  serve_static.nix  static_files.nix
nix/modules/: default.nix
scripts/: create_volt_test_db.py  test-setup.sh
src/ekklesia_voting/: __init__.py  app.py  datamodel.py  enums.py  identity_policy.py  request.py  runserver.py
src/ekklesia_voting/concepts/ballot/: __init__.py  ballot_cells.py  ballot_contracts.py  ballot_helper.py  ballot_views.py  ballots.py
src/ekklesia_voting/concepts/ballot/templates/: ballot.j2.jade  ballot_confirm.j2.jade  ballot_vote.j2.jade  ballots.j2.jade
src/ekklesia_voting/concepts/ballot_voting/: __init__.py  ballot_voting_cells.py  ballot_voting_contracts.py  ballot_voting_helper.py  ballot_voting_views.py  ballot_votings.py
src/ekklesia_voting/concepts/ekklesia_voting/: __init__.py  ekklesia_voting_cells.py  ekklesia_voting_models.py  ekklesia_voting_views.py
src/ekklesia_voting/sass/: voting.sass
src/ekklesia_voting/static/css/: portal.css  voting.css
tests/: conftest.py  create_test_db.py  factories.py  fixtures.py  test_db.sql
tests/concepts/ballot/: test_ballots.py
tests/concepts/ekklesia_voting/: test_index.py  test_login.py
(+12 files in other folders)
