[metadata]
name = ekklesia-voting
description = voting component of the Ekklesia eDemocracy system
author = Plexar
author_email = holger@burbach.eu
license = GNU Affero General Public License v3 or later (AGPLv3+)
classifiers =
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

keywords = portal, ekklesia, evoting, edemocracy, democracy, voting

[tool:pytest]
norecursedirs=tests/helpers
testpaths = tests

[pylama:pycodestyle]
max_line_length = 140

[coverage:run]
omit =
    src/ekklesia_voting/runserver.py
    src/ekklesia_voting/pathtool.py

[coverage:report]
skip_covered = True
# Regexes for lines to exclude from consideration
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover

    # Don't complain about missing debug-only code:
    def __repr__
    if self\.debug

    # Don't complain if tests don't hit defensive assertion code:
    raise AssertionError
    raise NotImplementedError

    # Don't complain if non-runnable code isn't run:
    if 0:
    if __name__ == .__main__.:

